Raster example for leaflet added

--- a/code_samples/leaflet-raster.html
+++ b/code_samples/leaflet-raster.html
@@ -62,76 +62,6 @@ xhr.onload = function(e) {
         }
     }
 
-    var intervalsSpd = [0, 8, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42,
-      44, 46, 48, 50, 52, 56, 60, 64, 68, 72, 76, 80, 84, 88, 92, 96 ];
-    var bandsWind = rastertools.isobands(spdData, geoTransform, intervalsSpd);
-
-    function getColor(d) {
-    return d > 92   ? '#643c32' :
-           d > 88   ? '#643c32' :
-           d > 84   ? '#a50000' :
-           d > 80   ? '#c10000' :
-           d > 76   ? '#e11400' :
-           d > 72   ? '#ff3200' :
-           d > 68   ? '#ff6000' :
-           d > 64   ? '#ffa100' :
-           d > 60   ? '#ffc13c' :
-           d > 56   ? '#ffe978' :
-           d > 52   ? '#c9ffbf' :
-           d > 50   ? '#b5fbab' :
-           d > 48   ? '#97f58d' :
-           d > 46   ? '#78f572' :
-           d > 44   ? '#50ef50' :
-           d > 42   ? '#36d33c' :
-           d > 40   ? '#1eb31e' :
-           d > 38   ? '#0ea10e' :
-           d > 36   ? '#e1ffff' :
-           d > 34   ? '#b5f1fb' :
-           d > 32   ? '#97d3fb' :
-           d > 30   ? '#78b9fb' :
-           d > 28   ? '#50a5f5' :
-           d > 26   ? '#3c97f5' :
-           d > 24   ? '#2883f1' :
-           d > 22   ? '#1e6eeb' :
-           d > 20   ? '#1464d3' :
-           d > 18   ? '#646464' :
-           d > 16   ? '#979797' :
-           d > 14   ? '#bababa' :
-           d > 12   ? '#d1d1d1' :
-           d > 8    ? '#e5e5e6' :
-           d > 0   ? '#ffffff' :
-                    '#ffffff';
-            }
-
-
-    function style(feature) {
-    return {
-        fillColor: getColor(feature.properties[0].lowerValue),
-        weight: 2,
-        opacity: 1,
-        color: getColor(feature.properties[0].lowerValue),
-        dashArray: '3',
-        fillOpacity: 0.5
-      };
-    }
-
-    var bandsWindLayer = L.geoJson(bandsWind, {
-      style: style
-    });
-
-
-    var intervalsPress = [970, 972, 974, 976, 978, 980, 982, 984, 986, 988, 990, 992, 994, 996, 998,
-      1000, 1002, 1004, 1006, 1008, 1010, 1012, 1014, 1016, 1018, 1020, 1022, 1024, 1026, 1028];
-    var isobars = rastertools.isolines(pressData, geoTransform, intervalsPress);
-
-    var isobarsLayer = L.geoJSON(isobars, {
-		    style: {
-          "color": "#333",
-          "weight": 2,
-          "opacity": 0.65
-        }
-	 });
-
    //Creating the color scale https://github.com/santilland/plotty/blob/master/src/plotty.js
    var cs_def = {positions:[0.0,0.030303030303,0.0606060606061,0.0909090909091,0.121212121212,0.151515151515,0.181818181818,0.212121212121,0.242424242424,0.272727272727,0.30303030303,0.333333333333,0.363636363636,0.393939393939,0.424242424242,0.454545454545,0.484848484848,0.515151515152,0.545454545455,0.575757575758,0.606060606061,0.636363636364,0.666666666667,0.69696969697,0.727272727273,0.757575757576,0.787878787879,0.818181818182,0.848484848485,0.878787878788,0.909090909091,0.939393939394,0.969696969697,1.0],
      colors:["#ffffff", "#e5e5e6" , "#d1d1d1", "#bababa", "#979797", "#646464",
@@ -230,15 +160,9 @@ xhr.onload = function(e) {
    });
 
    var map = L.map('map', {
-     layers: [baseLayer, bandsWindLayer]
+     layers: [baseLayer, imageLayer]
    }).setView([13, 81], 6);
 
-
-   L.control.layers(null, {
-    "Wind speed": bandsWindLayer,
-    "Pressure": isobarsLayer,
-    "Image": imageLayer
-    }).addTo(map);
 
 
   map.on('click', function(e) {
